[package]
name = "sslproxy"
version = "0.1.0"
edition = "2021"
description = "An easy ssl proxy that lazily obtains LetsEncrypt certs with SNI virtual hosting"
license = "MIT"
authors = ["Aiden McClelland <me@drbonez.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-acme = { version = "0.3.1", git = "https://github.com/dr-bonez/async-acme.git", features = [
    "use_rustls",
    "use_tokio",
] }
color-eyre = "0.6.2"
http = "0.2.9"
hyper = { version = "0.14.26", features = ["server"] }
openssl-sys = { version = "0.9.85", features = ["vendored"] }
pem = "2"
rustls = "0.21.0"
rustls-native-certs = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24.0"
tokio-stream = { version = "0.1.12", features = ["sync"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
trust-dns-resolver = { version = "0.22.0", features = ["system-config"] }

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
